# generative-learning

./: .gitignore  IMPROVEMENT-PLAN.md  learning-website.skill
api/: .env.example  db.py  generator.py  main.py  pyproject.toml  requirements.txt
api/static/: index.html
core/prebuild/: inject.py  shell.html
core/references/: architecture-content-pipeline.md  content-rendering-catalog.md  skill-1-content.md  skill-2-enrichment.md  skill-3-coherence.md  skill-4-inject.md
core/template/: index.html  package-lock.json  tsconfig.json  vite.config.ts
core/template/src/: App.tsx
eval/: compare.py  config.py  generate.py  judge.py  llm.py  pyproject.toml  report.py
eval/configs/: all-sonnet.yaml  budget.yaml  haiku-wave1.yaml  opus-haiku-mix.yaml  opus-premium.yaml
eval/tests/: conftest.py  test_config.py  test_report.py
interactive-learning-explorer/: SKILL.md
interactive-learning-explorer/prebuild/: shell.html
interactive-learning-explorer/references/: architecture-content-pipeline.md  content-rendering-catalog.md  schema.md  skill-0-structure.md  skill-1-content.md  skill-1-research.md  skill-2-content.md  skill-2-enrichment.md  skill-3-build.md  skill-3-coherence.md  skill-4-inject.md
interactive-learning-explorer/template/: index.html  package-lock.json  package.json  vite.config.ts
learning-website/: SKILL.md
learning-website/references/: skill-0-structure.md
products/company-explorer/: SKILL.md
products/paper-explainer/: SKILL.md
products/repo-explorer/: SKILL.md
prompts/: brainstorm-missing-visualizations.md
repo-explorer/: SKILL.md
(+81 files in other folders)
