[project]
name = "learning-website-api"
version = "0.1.0"
description = "Web app for generating learning websites"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "openai>=2.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.42.0",
]
