[project]
name = "eval"
version = "0.1.0"
description = "Model comparison eval tool for learning website generation"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.28.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0",
]
